feat: add Canvas to frontend
